--- a/Dengue_AI/DengAI_CTAI_project.ipynb
+++ b/Dengue_AI/DengAI_CTAI_project.ipynb
@@ -778,7 +778,7 @@
    "id": "c6b862c6",
    "metadata": {},
    "source": [
-    "'Reanalysis_specific_humidity_g_per_kg' and 'reanalysis_dew_point_temp_k' seem to be stronges correlated with 'total_cases', which makes sense as musquitos thrive in wet weather. However, interestingly, precipitation does not seem to be very strongly correlated to 'total_cases'."
+    "'Reanalysis_specific_humidity_g_per_kg' and 'reanalysis_dew_point_temp_k' seem to be strongest correlated with 'total_cases', which makes sense as musquitos thrive in wet weather. However, surprisingly, precipitation does not seem to be very strongly correlated to 'total_cases'."
    ]
   },
   {
