list of correlations

--- a/Dengue_AI/DengAI_CTAI_project.ipynb
+++ b/Dengue_AI/DengAI_CTAI_project.ipynb
@@ -826,6 +826,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7d6fd75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correlations San Juan\n",
+    "sj_corr_sorted = sj_corr['total_cases'].drop('total_cases').sort_values(ascending=False)\n",
+    "print(\"San Juan correlations with total_cases (descending):\")\n",
+    "print(sj_corr_sorted)\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Correlations Iquitos\n",
+    "iq_corr_sorted = iq_corr['total_cases'].drop('total_cases').sort_values(ascending=False)\n",
+    "print(\"Iquitos correlations with total_cases (descending):\")\n",
+    "print(iq_corr_sorted)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b28cfa99",
    "metadata": {},
